# VIPLYR-video-player

./: AGENTS.md  AppUI.cpp  AppUI.h  CMakeLists.txt  Makefile  PlayerView.cpp  PlayerView.h  README.md  build.sh  main.cpp
src/: main.cpp
src/Core/: MediaEngine.cpp  MediaEngine.h
src/UI/: Components.cpp  Components.h  MainWindow.cpp  MainWindow.h  VideoCanvas.cpp  VideoCanvas.h
src/Utils/: Theme.h
